Fixed http basic auth